简历的代码

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="poll">
-                        <div class="poll_desc">php</div>
+                        <div class="poll_desc">angularjs</div>
                         <div class="skills">
                             <div style="width:35%"></div>
                         </div>
@@ -158,7 +158,7 @@
                 <p>撒旦asda的</p>
             </div>
             <div class="col-md-6 ab-right">
-                <img src="images/break.jpg" alt="" class="img-responsive">
+                <img src="images/1%20(1).JPG" alt="" class="img-responsive">
             </div>
             <div class="clearfix"></div>
         </div>
@@ -175,13 +175,13 @@
             </div>
             <div class="work-grids">
                 <div class="col-md-4 work-gd1">
-                    <img src="images/w1.jpg" alt="" class="img-responsive">
+                    <img src="images/1%20(2).JPG" alt="" class="img-responsive">
                 </div>
                 <div class="col-md-4 work-gd1">
-                    <img src="images/w2.jpg" alt="" class="img-responsive">
+                    <img src="images/1%20(3).JPG" alt="" class="img-responsive">
                 </div>
                 <div class="col-md-4 work-gd1">
-                    <img src="images/w3.jpg" alt="" class="img-responsive">
+                    <img src="images/1%20(4).JPG" alt="" class="img-responsive">
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -193,38 +193,38 @@
     <div class="container">
         <div class="gallery-main">
             <div class="gallery-top">
-                <h3>My Portfolio</h3>
+                <h3>相册</h3>
                 <img src="images/circles.png" alt=""/>
             </div>
             <div class="gallery-bottom">
                 <div class="col-md-4 gallery-left">
-                    <a href="images/g1.jpg" rel="title" class="mask">
-                        <img src="images/g1.jpg" alt="" class="img-responsive zoom-img">
+                    <a href="images/1%20(1).JPG" rel="title" class="mask">
+                        <img src="images/1%20(1).JPG" alt="" class="img-responsive zoom-img">
                     </a>
                 </div>
                 <div class="col-md-4 gallery-left">
-                    <a href="images/g2.jpg" rel="title" class="mask">
-                        <img src="images/g2.jpg" alt="" class="img-responsive zoom-img">
+                    <a href="images/1%20(1).JPG" rel="title" class="mask">
+                        <img src="images/1%20(1).JPG" alt="" class="img-responsive zoom-img">
                     </a>
                 </div>
                 <div class="col-md-4 gallery-left">
-                    <a href="images/g3.jpg" rel="title" class="mask">
-                        <img src="images/g3.jpg" alt="" class="img-responsive zoom-img">
+                    <a href="images/1%20(1).JPG" rel="title" class="mask">
+                        <img src="images/1%20(1).JPG" alt="" class="img-responsive zoom-img">
                     </a>
                 </div>
                 <div class="col-md-4 gallery-left">
-                    <a href="images/g4.jpg" rel="title" class="mask">
-                        <img src="images/g4.jpg" alt="" class="img-responsive zoom-img">
+                    <a href="images/1%20(1).JPG" rel="title" class="mask">
+                        <img src="images/1%20(1).JPG" alt="" class="img-responsive zoom-img">
                     </a>
                 </div>
                 <div class="col-md-4 gallery-left">
-                    <a href="images/g5.jpg" rel="title" class="mask">
-                        <img src="images/g5.jpg" alt="" class="img-responsive zoom-img">
+                    <a href="images/1%20(1).JPG" rel="title" class="mask">
+                        <img src="images/1%20(1).JPG" alt="" class="img-responsive zoom-img">
                     </a>
                 </div>
                 <div class="col-md-4 gallery-left">
-                    <a href="images/g6.jpg" rel="title" class="mask">
-                        <img src="images/g6.jpg" alt="" class="img-responsive zoom-img">
+                    <a href="images/1%20(1).JPG" rel="title" class="mask">
+                        <img src="images/1%20(1).JPG" alt="" class="img-responsive zoom-img">
                     </a>
                 </div>
                 <div class="clearfix"></div>
