简历的代码

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 <div class="weare" id="about">
     <div class="container">
         <div class="weare-main">
-            <h2>关于我e</h2>
+            <h2>关于我</h2>
             <img src="images/circles.png" alt="">
             <p>我的技能.</p>
         </div>
         <div class="weare-bottom">
             <div class="col-md-6 weare-left">
-                <img src="images/ab.jpg" class='img-responsive' alt=""/>
+                <img src="images/1%20(1).JPG" class='img-responsive' style="height: 380px" alt=""/>
             </div>
             <div class="col-md-6 weare-right">
                 <h3>专业</h3>
@@ -154,8 +154,14 @@
     <div class="container">
         <div class="about-main">
             <div class="col-md-6 ab-left">
-                <h4></h4>
-                <p>撒旦asda的</p>
+                <h4>专业能力 </h4>
+                <p>1. 熟练使用PS实现Web效果图</p>
+                 <p>   2. 熟练掌握HTML,HTML5,CSS,CSS3</p>
+                 <p>   3. 熟练使用ajax和php进行前后端交互</p>
+                 <p>   4. 熟练使用webstorm、photoshop、Dreamweaver,sublime等软件</p>
+                <p> 5. 熟练使用JavaScript\JQuery完成前端DOM编程</p>
+                <p>6. 熟悉bootstrap\angular js等流行前端框架</p>
+
             </div>
             <div class="col-md-6 ab-right">
                 <img src="images/1%20(1).JPG" alt="" class="img-responsive">
@@ -175,13 +181,13 @@
             </div>
             <div class="work-grids">
                 <div class="col-md-4 work-gd1">
-                    <img src="images/1%20(2).JPG" alt="" class="img-responsive">
+                    <img src="images/1%20(1).JPG" alt="" class="img-responsive">
                 </div>
                 <div class="col-md-4 work-gd1">
-                    <img src="images/1%20(3).JPG" alt="" class="img-responsive">
+                    <img src="images/1%20(1).JPG" alt="" class="img-responsive">
                 </div>
                 <div class="col-md-4 work-gd1">
-                    <img src="images/1%20(4).JPG" alt="" class="img-responsive">
+                    <img src="images/1%20(1).JPG" alt="" class="img-responsive">
                 </div>
                 <div class="clearfix"></div>
             </div>
