简历的代码

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <ul class="res">
                         <li><a class="scroll active" href="#home">主页</a></li>
                         <li><a class="scroll" href="#about">技能</a></li>
-                        <li><a class="scroll" href="#services">Services</a></li>
+                        <li><a class="scroll" href="#services">作品</a></li>
                         <!--<li><a class="scroll" href="#team">关于</a></li>-->
                         <li><a class="scroll" href="#portfolio">我的照片</a></li>
                         <li><a class="scroll" href="#contact">联系方式</a></li>
@@ -114,7 +114,7 @@
         </div>
         <div class="weare-bottom">
             <div class="col-md-6 weare-left">
-                <img src="images/1%20(1).JPG" class='img-responsive' style="height: 380px" alt=""/>
+                <img src="images/pic.jpg" class='img-responsive' style="height: 380px" alt=""/>
             </div>
             <div class="col-md-6 weare-right">
                 <h3>专业</h3>
@@ -164,7 +164,7 @@
 
             </div>
             <div class="col-md-6 ab-right">
-                <img src="images/1%20(1).JPG" alt="" class="img-responsive">
+                <img src="images/pic.jpg" alt="" class="img-responsive">
             </div>
             <div class="clearfix"></div>
         </div>
@@ -181,13 +181,13 @@
             </div>
             <div class="work-grids">
                 <div class="col-md-4 work-gd1">
-                    <img src="images/1%20(1).JPG" alt="" class="img-responsive">
+                    <img src="images/xx1.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="col-md-4 work-gd1">
-                    <img src="images/1%20(1).JPG" alt="" class="img-responsive">
+                    <img src="images/xx2.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="col-md-4 work-gd1">
-                    <img src="images/1%20(1).JPG" alt="" class="img-responsive">
+                    <img src="images/xx3.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -204,33 +204,33 @@
             </div>
             <div class="gallery-bottom">
                 <div class="col-md-4 gallery-left">
-                    <a href="images/1%20(1).JPG" rel="title" class="mask">
-                        <img src="images/1%20(1).JPG" alt="" class="img-responsive zoom-img">
+                    <a href="images/pic.jpg" rel="title" class="mask">
+                        <img src="images/pic.jpg" alt="" class="img-responsive zoom-img">
                     </a>
                 </div>
                 <div class="col-md-4 gallery-left">
-                    <a href="images/1%20(1).JPG" rel="title" class="mask">
-                        <img src="images/1%20(1).JPG" alt="" class="img-responsive zoom-img">
+                    <a href="images/pic.jpg" rel="title" class="mask">
+                        <img src="images/pic.jpg" alt="" class="img-responsive zoom-img">
                     </a>
                 </div>
                 <div class="col-md-4 gallery-left">
-                    <a href="images/1%20(1).JPG" rel="title" class="mask">
-                        <img src="images/1%20(1).JPG" alt="" class="img-responsive zoom-img">
+                    <a href="images/pic.jpg" rel="title" class="mask">
+                        <img src="images/pic.jpg" alt="" class="img-responsive zoom-img">
                     </a>
                 </div>
                 <div class="col-md-4 gallery-left">
-                    <a href="images/1%20(1).JPG" rel="title" class="mask">
-                        <img src="images/1%20(1).JPG" alt="" class="img-responsive zoom-img">
+                    <a href="images/pic.jpg" rel="title" class="mask">
+                        <img src="images/pic.jpg" alt="" class="img-responsive zoom-img">
                     </a>
                 </div>
                 <div class="col-md-4 gallery-left">
-                    <a href="images/1%20(1).JPG" rel="title" class="mask">
-                        <img src="images/1%20(1).JPG" alt="" class="img-responsive zoom-img">
+                    <a href="images/1pic.jpg" rel="title" class="mask">
+                        <img src="images/pic.jpg" alt="" class="img-responsive zoom-img">
                     </a>
                 </div>
                 <div class="col-md-4 gallery-left">
-                    <a href="images/1%20(1).JPG" rel="title" class="mask">
-                        <img src="images/1%20(1).JPG" alt="" class="img-responsive zoom-img">
+                    <a href="images/pic.jpg" rel="title" class="mask">
+                        <img src="images/pic.jpg" alt="" class="img-responsive zoom-img">
                     </a>
                 </div>
                 <div class="clearfix"></div>
