简历的代码

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 gallery-left">
-                    <a href="images/1pic.jpg" rel="title" class="mask">
+                    <a href="images/pic.jpg" rel="title" class="mask">
                         <img src="images/pic.jpg" alt="" class="img-responsive zoom-img">
                     </a>
                 </div>
